Improve health check responses
